# AMRS

./: .env.integration-test  .env.test  .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml  start.sh
.github/ISSUE_TEMPLATE/: RELEASE.md
.github/workflows/: ci-test.yaml
amrs/: __init__.py  config.py
bindings/python/: Makefile  README.md  pyproject.toml
bindings/python/amrs/: config.py
bindings/python/amrs/router/: random.py  router.py
bindings/python/tests/integration/: config_test.py
bindings/python/tests/unit/: config_test.py  conftest.py
src/: config.rs  lib.rs  main.rs
src/client/: client.rs  config.rs
src/provider/: common.rs  fake.rs  faker.rs  openai.rs  provider.rs
src/router/: random.rs  router.rs  stats.rs  weight.rs  wrr.rs
src/types/: completions.rs
tests/: client.rs
tests/unit/: config_test.py
