[project]
name = "AMRS"
version = "0.0.0"
description = "The adaptive model routing system for exploration and exploitation."
authors = [
    { name = "InftyAI", email = "contact@inftyai.com" }
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "pydantic>=2.12.4",
]

[dependency-groups]
dev = [
  {include-group = "lint"},
  {include-group = "test"}
]
lint = [
    "ruff>=0.12",
]
test = [
    "pytest>=8.4",
    "pytest-asyncio>=0.22",
    "pytest-timeout>=2.1",
    # Data generation
    "faker>=37.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
markers = [
    "integration_test: marks tests as integration tests",
]

[tool.mypy]
exclude = [
    'tmp/',
]
